# ComputerGraphicsAlgo

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  ReflectiveShadowMap.cpp  ReflectiveShadowMap.h  Shader.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Utility.h  main.cpp
scene/lucy/: LICENSE.txt  README.txt  lucy.mtl  lucy_3M.mtl  lucy_3M_scale.mtl
shader/: Combine.fs  Combine.vs  FullScreenQuad.fs  FullScreenQuad.vs  RSM.fs  RSM.vs  Skybox.fs  Skybox.vs
